# KAIST-DP

./: CMakeLists.txt  README.md  package.xml
config/VINS-form/front_cam/: front_cam.yaml  front_cam_left.yaml  front_cam_right.yaml
config/VINS-form/left_cam/: left_cam.yaml  left_cam_left.yaml  left_cam_right.yaml
config/VINS-form/right_cam/: right_cam.yaml  right_cam_left.yaml  right_cam_right.yaml
launch/: three_cams.launch
sh_files/: get_kaist_dp_bag.sh
